Rosario Student Information System - CHANGES

Changes in 2.8.9
----------------
- Attendance Codes Type & State Code required in AttendanceCodes.php
- Add Add No Subjects/Courses were found error in ReportCardComments.php
- Update french & spanish translations

Changes in 2.8.8
----------------
- Admin menu: div + table to nested ul in Side.php
- Add sub-menu display on mouse over in stylesheet.css & colors.css
- adjust Side.php submenu bottom offset + simplify openMenu() in warehouse.js
- listOutput sorting icon in stylesheet.css
- Use Character arrow instead of CSS arrow in stylesheet.css
- Simplify switchMenu() in warehouse.js
- Add .switchMenu class & remove CSS arrow in Search.fnc.php, StaffWidgets.fnc.php & Widgets.fnc.php

Changes in 2.8.7
----------------
- Fix #101 cookie domain if RosarioSIS installed at server www root in Warehouse.php

Changes in 2.8.6
----------------
- Beautify + JSHint in warehouse.js
- Comment & format, then CSSLint + Autoprefixer in stylesheet.css & colors.css
- Remove abbreviations + change orientation to landscape in AttendanceSummary.php
- Update french & spanish translations
- Concatenate and minify plugins.min.js (jquery.form.js + main16.js + calendar.js + calendar-setup.js)
- Fix SQL error relation "custom" does not exist in rosariosis.sql

Changes in 2.8.5
----------------
- Bugfix SQL error A field with precision 10, scale 2 must round to an absolute value less than 10^8 in *Fields.php, Other_Info.php & *Referrals.php
- Remove table CUSTOM in rosariosis.sql
- Bugfix SQL error syntax error at or near ")" in FinalGrades.php
- Bugfix Invalid argument supplied for foreach() in Schedule.php
- Bugfix Allowed memory size of 134217728 bytes exhausted in AttendanceSummary.php

Changes in 2.8.4
----------------
- Add multiple checkbox fields in ReferralLog.php
- errors if No courses assigned to teacher or No Students were found in GradebookBreakdown.php