@@ -219,6 +219,11 @@ code{
 .widefat th a[href*="LO_direction=-1"]:hover:after{
 	content: "\25be";
 }
+.widefat th a[href*="LO_sort=CHECKBOX"]:after{
+	content: "";
+	padding-left: 0;
+}
+
 .widefat td,.widefat th{
 	text-align:left;
 	border-width:1px 0;
