@@ -5,6 +5,7 @@ Changes in 2.8.9
 - Attendance Codes Type & State Code required in AttendanceCodes.php
 - Add Add No Subjects/Courses were found error in ReportCardComments.php
 - Update french & spanish translations
+- Bugfix ListOutput checkbox column: no sorting icon in stylesheet.css
 
 Changes in 2.8.8
 ----------------
